Fix .bleed: position:absolute on img, static!important on wrappers to fix containing block

--- a/style.css
+++ b/style.css
@@ -4177,19 +4177,22 @@ input[type="submit"]:hover,
    ========================================================================== */
 
 .bleed {
+	position: relative;
 	overflow: hidden;
 }
 
 .bleed .wp-block-image,
 .bleed figure {
-	height: 100%;
+	position: static !important;
+	float: none !important;
 	width: 100%;
 	margin: 0;
-	float: none;
 }
 
 .bleed img {
-	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
